# crewaiagents

./: README.md  pyproject.toml  report.md
src/aiagents/: crew.py  main.py
src/aiagents/config/: agents.yaml
